--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#create</h1>
-<p>Find me in app/views/users/create.html.erb</p>
+<h1>Signup!</h1>
+<% if @user.errors.any? %>
+  <p><%= @user.errors.full_messages %></p>
+<% end %>
+<%= form_for @user, url: users_path do |f| %>
+  first_name: <%= f.text_field :first_name %>
+  last_name: <%= f.text_field :last_name %>
+
+  Email: <%= f.text_field :email %>
+  Password: <%= f.password_field :password %>
+
+  Password Confirmation: <%= f.password_field :password_confirmation%>
+  <%= f.submit "Submit" %>
+<% end %>
+
