finished homepage skeleton feel free to edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  <main class="container">
+    <%= render 'layouts/top_nav' %>
+  </main>
+
   <body>
     <%= yield %>
   </body>
