--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
+
+// App
+@import "navbar";
+@import "home";
+// Global
+body {
+  padding-top: 70px;
+}
