--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -59,7 +59,7 @@
                   </form>
                 </div>
                 <div class="bottom text-center">
-                  New here ? <a href="#"><b>Join Us</b></a>
+                  New here ? <a href="/users/new"><b>Join Us</b></a>
                 </div>
             </div>
           </li>
