--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
-<body class="homepage">
-<h1>Welcome to Cover</h1>
-<p></p>
+<body class="homepage-bg">
+  <div class="container">
+    <div class="text-center">
+      <h1 class="display-3">Welcome to Cover</h1>
+    </div>
+  </div>
 </body>
