--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -41,10 +41,10 @@
                   <form class="form" role="form" method="post" action="/login" accept-charset="UTF-8" id="login-nav">
                       <div class="form-group">
                         <label class="sr-only" for="Email">Email address</label>
-                        <input type="email" class="form-control" id="password" placeholder="Email address" required>
+                        <input type="text" class="form-control" id="text" placeholder="Email address" required>
                       </div>
                       <div class="form-group">
-                        <label class="sr-only" for="exampleInputPassword2">Password</label>
+                        <label class="sr-only" for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password" required>
                                               <div class="help-block text-right"><a href="">Forget the password ?</a></div>
                       </div>
