added more css styling and button placeholders for homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,23 +1,26 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,700');
 
 // App
 @import "navbar";
 @import "home";
+$oswald: 'Oswald', sans-serif;
 // Global
 body {
   padding-top: 70px;
   margin: 0;
   .main-message{
-    background-color:rgba(200,200,200,0.5);
-    color: white;
+    font-family: $oswald;
+    font-size: 4em;
+    color: #eee;
   }
  
 } 
 
 .homepage-bg {
-  background: url(https://static.pexels.com/photos/466691/pexels-photo-466691.jpeg) no-repeat center center fixed; 
+  background: url(https://static.pexels.com/photos/260922/pexels-photo-260922.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -31,3 +34,12 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+.signup-bg {
+  background: url(https://static.pexels.com/photos/370984/pexels-photo-370984.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
