--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <body class="homepage-bg">
   <div class="container">
     <div class="text-center">
-      <h1 class="display-3">Welcome to Cover</h1>
+      <h1 class="display-5 main-message">Welcome to Cover</h1>
     </div>
+    <div class="text-center start-button">
+    <a href = "#" class="btn btn-info" role="button">Getting started</a> 
+    <a href="#" class="btn btn-info" role="button">Browse offers</a>
   </div>
 </body>
