Added jobs form

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,6 +7,9 @@
 
   <div class="jobs">
     <%= render @jobs %>
+    <div class="well">
+    <%= link_to '+ New Job', [:new, :job], class: 'btn btn-info' %>
+  </div>
   </div>
 
 </section>
