--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -41,12 +41,12 @@
                   <form class="form" role="form" method="post" action="/login" accept-charset="UTF-8" id="login-nav">
                       <div class="form-group">
                         <label class="sr-only" for="Email">Email address</label>
-                        <input type="text" class="form-control" id="text" placeholder="Email address" required>
+                        <input type="text" class="form-control" id="email" placeholder="Email address" required>
                       </div>
                       <div class="form-group">
                         <label class="sr-only" for="password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password" required>
-                                              <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+                        <div class="help-block text-right"><a href="">Forget the password ?</a></div>
                       </div>
                       <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block">Sign in</button>
@@ -58,9 +58,9 @@
                       </div>
                   </form>
                 </div>
-                <div class="bottom text-center">
-                  New here ? <a href="/users/new"><b>Join Us</b></a>
-                </div>
+              <div class="bottom text-center">
+                New here? <a href="#" data-toggle="modal" data-target="#myModal"><strong> Join Us</strong> </a>
+              
             </div>
           </li>
         </ul>
@@ -70,3 +70,21 @@
     </div>
   </div>
 </nav>
+<div id="myModal" class="modal fade" role="dialog">
+  <div class=" text-center modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Register as:</h4>
+      </div>
+      <div class="modal-body">
+        <a href = "/users/worker" class="btn btn-info" role="button">Worker</a><br>
+        or <br>
+        <a href = "/users/restaurant" class="btn btn-info" role="button">Restaurant Owner</a>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
