--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <body class="homepage-bg">
   <div class="container">
     <div class="text-center">
-      <h1 class="display-5 main-message">Welcome to Cover</h1>
+      <h1 class="display-5 main-message">Welcome to gCover</h1>
     </div>
     <div class="text-center start-button">
     <a href="#" class="btn btn-info" role="button" data-toggle="modal" data-target="#myModal"><strong> Getting started</strong> </a>
