--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -15,16 +15,19 @@
           <%= link_to 'Home', :root %>
         </li>
       </ul>
-
+      <% if current_user %>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Name placeholder
+            You are Signed in, <%= current_user.first_name %>
             <span class="caret"></span>
-            </a>
-          </li>
+            <ul class="dropdown-menu">
+              <li><a href="/logout">Logout</a></li>
+              <li><a href="#">placeholder</a></li>
+              <li><a href="#">placeholder</a></li>
+            </ul>
         </ul>
-
+      <% else %>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
@@ -64,7 +67,7 @@
             </div>
           </li>
         </ul>
-
+      <% end %>
         </li>
       </ul>
     </div>
