started on styling for views

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,5 @@
 <!-- View for a user, restaurant -->
+<div class="container">
 <% if current_user.usertype_id == 1 %>
     <section>
       <header>
@@ -33,3 +34,4 @@
       </div>
     </section>
 <% end %>
+</div>
