--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,5 +1,4 @@
-
-<div style="border:1px solid black;" class="container">
+<div class="container">
   <div class="row">
     <div class="col-lg-3 col-sm-6">
       <div class="card hovercard">
