--- a/app/views/users/restaurant.html.erb
+++ b/app/views/users/restaurant.html.erb
@@ -14,7 +14,9 @@
                 <% if @user.errors.any? %>
                 <p><%= @user.errors.full_messages %></p>
                 <% end %>
-
+                <% flash.each do |key, value| %>
+                  <div class="alert alert-<%= key %>"><%= value %></div>
+                <% end %>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
                     <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name"%>
