--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -23,7 +23,7 @@
             <span class="caret"></span>
             <ul class="dropdown-menu">
               <li><a href="/logout">Logout</a></li>
-              <li><a href="#">placeholder</a></li>
+              <li><a href="/users/<%= current_user.id %>">Profile</a></li>
               <li><a href="#">placeholder</a></li>
             </ul>
         </ul>
