--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,34 +1,58 @@
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <dl class="dl-horizontal">
-        <dt>Start time</dt>
-        <dd><%= @job.start_time %></dd>
-        <dt>End time</dt>
-        <dd><%= @job.end_time %></dd>
-        <dt>Rate</dt>
-        <dd><%= @job.rate %></dd>
-        <dt>Description</dt>
-        <dd><%= @job.description %></dd>
-      </dl>
+<% if current_user.usertype_id == 1 %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8">
+        <dl class="dl-horizontal">
+          <dt>Start time</dt>
+          <dd><%= @job.start_time %></dd>
+          <dt>End time</dt>
+          <dd><%= @job.end_time %></dd>
+          <dt>Rate</dt>
+          <dd><%= @job.rate %></dd>
+          <dt>Description</dt>
+          <dd><%= @job.description %></dd>
+        </dl>
+      </div>
     </div>
   </div>
-</div>
+
+  <%= link_to 'Delete Job', @job, class: 'btn btn-primary', :method => :delete %>
+  <%= link_to 'Update Job', edit_job_path(@job), class: 'btn btn-primary' %>
 
 
-<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-  Add comment
-</button>
-<div class="collapse" id="collapseExample">
-  <div class="well">
-    <%= form_for [@job, @comment] do |f| %>
-      <%= f.text_area :comment %>
-      <%= f.button :submit, class: 'btn btn-primary' %>
-    <% end %>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Add comment
+  </button>
+  <div class="collapse" id="collapseExample">
+    <div class="well">
+      <%= form_for [@job, @comment] do |f| %>
+        <%= f.text_area :comment %>
+        <%= f.button :submit, class: 'btn btn-primary' %>
+      <% end %>
+    </div>
   </div>
-</div>
 
-<div>
-  <%= link_to 'All jobs', [:jobs], class: 'btn btn-primary' %>
-</div>
+  <div>
+    <%= link_to 'All jobs', [:jobs], class: 'btn btn-primary' %>
+  </div>
+
+<% else %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8">
+        <dl class="dl-horizontal">
+          <dt>Start time</dt>
+          <dd><%= @job.start_time %></dd>
+          <dt>End time</dt>
+          <dd><%= @job.end_time %></dd>
+          <dt>Rate</dt>
+          <dd><%= @job.rate %></dd>
+          <dt>Description</dt>
+          <dd><%= @job.description %></dd>
+        </dl>
+      </div>
+    </div>
+  </div>
+<% end %>
+
