--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -50,7 +50,8 @@
 </table>
 
 <div>
-    <%= form_for [@job, @application] do |a| %>      
+    <%= form_for [@job, @application] do |a| %>  
+      <% current_user %>    
       <%= a.button :submit, class: 'btn btn-primary' %>
     <% end %>
 </div>
