--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -7,7 +7,7 @@
           <dd><%= @job.start_time %></dd>
           <dt>End time</dt>
           <dd><%= @job.end_time %></dd>
-          <dt>Rate</dt>
+          <dt>Rate $</dt>
           <dd><%= @job.rate %></dd>
           <dt>Description</dt>
           <dd><%= @job.description %></dd>
@@ -18,6 +18,9 @@
 
   <%= link_to 'Delete Job', @job, class: 'btn btn-primary', :method => :delete %>
   <%= link_to 'Update Job', edit_job_path(@job), class: 'btn btn-primary' %>
+  <div>
+    <%= link_to 'All jobs', [:jobs], class: 'btn btn-primary' %>
+  </div>
 
 
   <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -32,11 +35,40 @@
     </div>
   </div>
 
-  <div>
-    <%= link_to 'All jobs', [:jobs], class: 'btn btn-primary' %>
-  </div>
+  <table class="table">
+  <thead>
+    <tr>
+      <th> Comments </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @job.comments.reverse_each do |c| %>
+      <tr>
+        <td> <%= c.user.first_name %></td>
+        <td> <%= c.comment %> </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th> Applications </th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @job.applications.reverse_each do |c| %>
+      <tr>
+        <td> <%= c.user.first_name %></td>
+        <td> <%= c.status %> </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <% else %>
+
   <div class="container">
     <div class="row">
       <div class="col-sm-8">
@@ -45,7 +77,7 @@
           <dd><%= @job.start_time %></dd>
           <dt>End time</dt>
           <dd><%= @job.end_time %></dd>
-          <dt>Rate</dt>
+          <dt>Rate $</dt>
           <dd><%= @job.rate %></dd>
           <dt>Description</dt>
           <dd><%= @job.description %></dd>
@@ -53,9 +85,6 @@
       </div>
     </div>
   </div>
-<% end %>
-
-
 <table class="table">
   <thead>
     <tr>
@@ -72,11 +101,16 @@
   </tbody>
 </table>
 
-<div>
-    <%= form_for [@job, @application] do |a| %>  
-      <% current_user %>    
-      <%= a.button :submit, class: 'btn btn-primary' %>
+<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Add comment
+</button>
+<div class="collapse" id="collapseExample">
+  <div class="well">
+    <%= form_for [@job, @comment] do |f| %>
+      <%= f.text_area :comment %>
+      <%= f.button :submit, class: 'btn btn-primary' %>
     <% end %>
+  </div>
 </div>
 
 <table class="table">
@@ -94,3 +128,11 @@
     <% end %>
   </tbody>
 </table>
+
+<div>
+    <%= form_for [@job, @application] do |a| %>
+      <% current_user %>
+      <%= a.button :submit, class: 'btn btn-primary' %>
+    <% end %>
+</div>
+<% end %>
