--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -15,8 +15,15 @@
             <a target="_blank" href="https://www.cactusclubcafe.com/">Cactus Club</a>
           </div>
 
-          <div class="desc">Start time: <%= job.start_time %></div>
-          <div class="desc">End time: <%= job.end_time %></div>
+          <div class="desc">Start time: <%= job.start_time %>
+
+          </div>
+          <div class="desc">End time: <%= job.end_time %>
+          </div>
+
+          <div>
+            <img src="<%= googleMapBuilder(job.user.latitude, job.user.longitude) %>">
+          </div>
         </div>
       </div>
     </div>
