Started on better error messages

--- a/app/views/users/restaurant.html.erb
+++ b/app/views/users/restaurant.html.erb
@@ -16,50 +16,65 @@
                 <% end %>
                 <% flash.each do |key, value| %>
                   <div class="alert alert-<%= key %>"><%= value %></div>
-                <% end %>
+                 <% end %>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name"%>
+                    <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name", required: false%>
+                    <p class="error error-empty"> Please enter your first name. </p>
                   </div>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.text_field :last_name, class: "form-control input-sm", placeholder: "Last Name" %>
+                    <%= f.text_field :last_name, class: "form-control input-sm", placeholder: "Last Name", required: false %>
+                    <p class="error error-empty"> Please enter your last name. </p>
                   </div>
                 </div>
               </div>
               <div class="form-group">
-                <%= f.text_field :email, class: "form-control input-sm", placeholder: "Email" %>
+                <%= f.email_field :email, class: "form-control input-sm", placeholder: "Email", required: false %>
+                <p class="error error-empty"> Please enter your Email. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :restaurant_name, class: "form-control input-sm", placeholder: "Company Name" %>
+                <%= f.text_field :restaurant_name, class: "form-control input-sm", placeholder: "Company Name", required: false %>
+                <p class="error error-empty"> Please enter your company name. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :street_address, class: "form-control input-sm", placeholder: "Sreet name and number" %>
+                <%= f.text_field :street_address, class: "form-control input-sm", placeholder: "Street Address", required: false %>
+                <p class="error error-empty"> Please enter your restaurant's street address. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :city, class: "form-control input-sm", placeholder: "City" %>
+                <%= f.text_field :city, class: "form-control input-sm", placeholder: "City", required: false %>
+                <p class="error error-empty"> Please enter your city. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :province, class: "form-control input-sm", placeholder: "Province" %>
+                <%= f.text_field :province, class: "form-control input-sm", placeholder: "Province", required: false %>
+                <p class="error error-empty"> Please enter your province. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :postal_code, class: "form-control input-sm", placeholder: "Postal code" %>
+                <%= f.text_field :postal_code, class: "form-control input-sm", placeholder: "Postal code", required: false %>
+                <p class="error error-empty"> Please enter a postal code. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :cell, class: "form-control input-sm", placeholder: "Cell Phone" %>
+                <%= f.text_field :cell, class: "form-control input-sm", placeholder: "Phone number", required: false %>
+                <p class="error error-empty"> Please enter a phone number. </p>
+                <p class="error error-phone-length"> Please enter a 10-digit phone number. </p>
               </div>
               <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.password_field :password, class: "form-control input-sm", placeholder: "Password" %>
+                    <%= f.password_field :password, class: "form-control input-sm", placeholder: "Password", required: false %>
+                    <p class="error error-empty"> Please enter a password. </p>
                   </div>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.password_field :password_confirmation, class: "form-control input-sm", placeholder: "Confirm Password" %>
+                    <%= f.password_field :password_confirmation, class: "form-control input-sm", placeholder: "Confirm Password", required: false %>
+                    <p class="error error-empty"> Please confirm your password. </p>
                   </div>
                 </div>
+                  <div class="col-xs-12">
+                    <p class="error error-matching"> Passwords do not match. </p> 
+                  </div>  
               </div>
               <%= f.submit "Submit", class: "btn btn-info btn-block" %>
               <% end %>
