--- a/app/views/users/worker.html.erb
+++ b/app/views/users/worker.html.erb
@@ -14,41 +14,48 @@
                 <% if @user.errors.any? %>
                 <p><%= @user.errors.full_messages %></p>
                 <% end %>
-                <% flash.each do |key, value| %>
-                  <div class="alert alert-<%= key %>"><%= value %></div>
-                <% end %>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name"%>
+                    <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name", required: false%>
+                    <p class="error error-empty"> Please enter your first name. </p>
                   </div>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.text_field :last_name, class: "form-control input-sm", placeholder: "Last Name" %>
+                    <%= f.text_field :last_name, class: "form-control input-sm", placeholder: "Last Name", required: false %>
+                    <p class="error error-empty"> Please enter your last name. </p>
                   </div>
                 </div>
               </div>
-
               <div class="form-group">
-                <%= f.text_field :email, class: "form-control input-sm", placeholder: "Email" %>
+                <%= f.email_field :email, class: "form-control input-sm", placeholder: "Email", required: false %>
+                <p class="error error-empty"> Please enter your Email. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :cell, class: "form-control input-sm", placeholder: "Cell Phone" %>
+                <%= f.text_field :postal_code, class: "form-control input-sm", placeholder: "Postal code", required: false %>
+                <p class="error error-empty"> Please enter a postal code. </p>
               </div>
               <div class="form-group">
-                <%= f.text_field :postal_code, class: "form-control input-sm", placeholder: "Postal code" %>
+                <%= f.text_field :cell, class: "form-control input-sm", placeholder: "Phone number", required: false %>
+                <p class="error error-empty"> Please enter a phone number. </p>
+                <p class="error error-phone-length"> Please enter a 10-digit phone number. </p>
               </div>
               <div class="row">
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.password_field :password, class: "form-control input-sm", placeholder: "Password" %>
+                    <%= f.password_field :password, class: "form-control input-sm", placeholder: "Password", required: false %>
+                    <p class="error error-empty"> Please enter a password. </p>
                   </div>
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
-                    <%= f.password_field :password_confirmation, class: "form-control input-sm", placeholder: "Confirm Password" %>
+                    <%= f.password_field :password_confirmation, class: "form-control input-sm", placeholder: "Confirm Password", required: false %>
+                    <p class="error error-empty"> Please confirm your password. </p>
                   </div>
                 </div>
+                  <div class="col-xs-12">
+                    <p class="error error-matching"> Passwords do not match. </p> 
+                  </div>  
               </div>
               <%= f.submit "Submit", class: "btn btn-info btn-block" %>
               <% end %>
