reviews on jobs have been implemented

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
     <%= render 'layouts/top_nav' %>
   </main>
 
+  <% flash.each do |type, content| %>
+    <%= content_tag :div, content, class: "alert alert-#{type}" %>
+  <% end %>
+
   <body>
     <%= yield %>
   </body>
