--- a/app/views/show.html.erb
+++ b/app/views/show.html.erb
@@ -86,6 +86,15 @@
                     <div class="col-sm-7"><%= @user.postal_code %><br><br>
                     </div>
                     <div class="clearfix">
+                    <button type="button" class="btn btn-primary">Experience</button>
+                              <% f.fields_for :experiences do | experiences_form | %>
+              <div class="form-group">
+
+              <%= experiences_form.text_field :months, class: "form-control input-sm", placeholder: "Year(s) of experence", required: false %>
+              <p class="error error-empty"> year(s) of experence. </p>
+
+            </div>
+              <% end %>
                     </div>
                     <div class="bot-border">
                     </div>
