--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -21,6 +21,12 @@
           <div class="desc">End time: <%= job.end_time %>
           </div>
 
+          </div>
+          <div class="desc">Job position: <%= job.jobtype.name %>
+          </div>
+
+          <br>
+
           <div>
             <img src="<%= googleMapBuilder(job.user.latitude, job.user.longitude) %>">
           </div>
