--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -22,9 +22,11 @@
             You are Signed in, <%= current_user.first_name %>
             <span class="caret"></span>
             <ul class="dropdown-menu">
-              <li><a href="/logout">Logout</a></li>
               <li><a href="/users/<%= current_user.id %>">Profile</a></li>
               <li><a href="/jobs">Job Posts</a></li>
+              <li><a href="/users/<%= current_user.id %>/applications"> Applications </a></li>
+              <li><a href="/logout">Logout</a></li>
+            
             </ul>
         </ul>
       <% else %>
