--- a/app/views/users/worker.html.erb
+++ b/app/views/users/worker.html.erb
@@ -14,6 +14,9 @@
                 <% if @user.errors.any? %>
                 <p><%= @user.errors.full_messages %></p>
                 <% end %>
+                <% flash.each do |type, content| %>
+                  <%= content_tag :div, content, class: "alert alert-#{type}" %>
+                <% end %>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                   <div class="form-group">
                     <%= f.text_field :first_name, class: "form-control input-sm", placeholder: "First Name", required: false%>
