--- a/app/views/show.html.erb
+++ b/app/views/show.html.erb
@@ -89,15 +89,8 @@
               <div class="clearfix">
 
                 <!-- Form for a user to add experience -->
-                <button type="button" class="btn btn-primary">Experience</button>
-                <% f.fields_for :experiences do |experiences_form| %>
-                    <div class="form-group">
+                <button href="/experience/new" type="button" class="btn btn-primary">Experience</button>
 
-                      <%= experiences_form.text_field :months, class: "form-control input-sm", placeholder: "Year(s) of experence", required: false %>
-                      <p class="error error-empty"> year(s) of experence. </p>
-
-                    </div>
-                <% end %>
               </div>
               <div class="bot-border">
               </div>
