--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -16,21 +16,22 @@
         </li>
       </ul>
       <% if current_user %>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            You are Signed in, <%= current_user.first_name %>
-            <span class="caret"></span>
-            <ul class="dropdown-menu">
-              <li><a href="/logout">Logout</a></li>
-              <li><a href="/users/<%= current_user.id %>">Profile</a></li>
-              <li><a href="/jobs">Job Posts</a></li>
-            </ul>
-        </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                You are Signed in, <%= current_user.first_name %>
+                <span class="caret"></span>
+                <ul class="dropdown-menu">
+                  <li><a href="/logout">Logout</a></li>
+                  <li><a href="/users/<%= current_user.id %>">Profile</a></li>
+                  <li><a href="/jobs">Job Posts</a></li>
+                </ul>
+          </ul>
       <% else %>
-       <ul class="nav navbar-nav navbar-right">
-         <a href="" class="btn btn-info" role="button" data-toggle="modal" data-target="#myModal"><strong> Sign up</strong>
-          <%= link_to 'Login', '/login', class: "btn btn-info" %>
+          <ul class="nav navbar-nav navbar-right">
+            <a href="" class="btn btn-info" role="button" data-toggle="modal" data-target="#myModal"><strong> Sign
+              up</strong>
+              <%= link_to 'Login', '/login', class: "btn btn-info" %>
       <% end %>
     </div>
   </div>
@@ -43,8 +44,8 @@
         <h4 class="modal-title">Register as:</h4>
       </div>
       <div class="modal-body">
-        <a href = "/users/worker" class="btn btn-info" role="button">Worker</a> or
-        <a href = "/users/restaurant" class="btn btn-info" role="button">Restaurant Owner</a>
+        <a href="/users/worker" class="btn btn-info" role="button">Worker</a> or
+        <a href="/users/restaurant" class="btn btn-info" role="button">Restaurant Owner</a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
