--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,8 +1,4 @@
-<% f.fields_for :experiences do |experiences_form| %>
-                    <div class="form-group">
+<% form_for [:user, @experience] do |f| %>
+  <%= employer_name %>
 
-                      <%= experiences_form.text_field :months, class: "form-control input-sm", placeholder: "Year(s) of experence", required: false %>
-                      <p> class="error error-empty"> year(s) of experence. </p>
-
-                    </div>
-                <% end %>
+<% end %>
