--- a/app/views/users/restaurant.html.erb
+++ b/app/views/users/restaurant.html.erb
@@ -84,4 +84,44 @@
       </div>
     </div>
   </div>
+  <% if current_user %>
+    <%= form_for [@user, @review] do |form| %>
+      <% if form.object.errors.any? %>
+        <div class="alert alert-danger">
+          <strong>The following errors prevented saving:</strong>
+          <ul>
+            <% form.object.errors.full_messages.each do |error| %>
+              <li><%= error %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div class="field">
+        <div> Please add a comment and rate this product </div>
+        <%= form.text_area :comment %>
+        <%= form.select :rating, 1..5 %>
+      </div>
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <table class="table">
+    <caption><h4>Reviews</h4></caption>
+    <thead>            
+      <th>Rating</th>
+      <th>Content</th>
+      <th>User</th>
+    </thead>
+    <tbody>
+      <% @user.reviews.reverse_each do |item| %>
+        <tr>
+          <td><%= item.rating %></td>
+          <td><%= item.comment %></td>
+          <td><%= item.user.first_name %> <%= item.user.last_name %></td>
+        </tr>
+      <% end %>  
+    </tbody>  
+  </table>
 </body>
