--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -107,10 +107,4 @@
       $('#profile-image-upload').click();
     });
   });
-  ` </script>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+</script>
