--- a/app/views/experiences/new.html.erb
+++ b/app/views/experiences/new.html.erb
@@ -1,5 +1,41 @@
-<h1>Render You Motherfucker!</h1>
+<h1>Enter your experience here</h1>
+<div class="container">
+  <div class="container">
+    <div class="row centered-form">
+      <div class="col-xs-12 col-sm-8 col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Enter your experiences</h3>
+          </div>
+          <div class="panel-body">
+            <%= form_for [@user, @experience] do |f| %>
 
-<% form_for [@user, @experience] do |f| %>
-    <%= f.text_field :employer_name %>
-<% end %>
+            <div class="form-group">
+            <%= f.text_field :employer_name, class: "form-control input-sm", placeholder: "Employer name" %>
+            <p> Please enter Employer name. </p>
+            </div>
+            <div class="form-group">
+              <%= f.text_field :months, class: "form-control input-sm", placeholder: "Months" %>
+              <p> Please enter months of experiences. </p>
+            </div>
+            <div class="form-group">
+              <%= f.text_field :jobtype_id, class: "form-control input-sm", placeholder: "Job type" %>
+              <p> Type of job </p>
+            </div>
+            <div class="form-group">
+              <%= f.text_field :description, class: "form-control input-sm", placeholder: "Description" %>
+              <p> Please enter a description. </p>
+            </div>
+            <%= f.submit "Submit", class: "btn btn-info btn-block" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
