--- a/app/views/show.html.erb
+++ b/app/views/show.html.erb
@@ -1,110 +1,143 @@
 <div class="container">
   <div class="row">
     <h2>Profile page</h2>
-      <div class="col-md-7 ">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 >Profile</h4>
-          </div>
-           <div class="panel-body">
-            <div class="box box-info">
-              <div class="box-body">
-                <div class="col-sm-6">
-                  <div  align="center"> <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive">
-                  </div>
-                    <br>
-                  </div>
-                  <div class="col-sm-6">
-                    <h4 style="color:#00b1b1;"><%= @user.first_name %> <%= @user.last_name %></h4></span>
-                  </div>
-                  <div class="clearfix"></div>
-                    <hr style="margin:5px 0 5px 0;">
-                    <div class="col-sm-5 col-xs-6 tital " >Restautant:
-                    </div>
-                    <div class="col-sm-7"><%= @user.restaurant_name %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >First Name:
-                    </div>
-                    <div class="col-sm-7 col-xs-6 "><%= @user.first_name %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Last Name:
-                    </div>
-                    <div class="col-sm-7"><%= @user.last_name %>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Cell Phone:
-                    </div>
-                    <div class="col-sm-7"><%= @user.cell %><br>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Email:
-                    </div>
-                    <div class="col-sm-7"><%= @user.email %><br>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >City:
-                    </div>
-                    <div class="col-sm-7"><%= @user.city %><br>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Street address:
-                    </div>
-                    <div class="col-sm-7"><%= @user.street_address %><br>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Province:
-                    </div>
-                    <div class="col-sm-7"><%= @user.province %><br>
-                    </div>
-                    <div class="clearfix">
-                    </div>
-                    <div class="bot-border">
-                    </div>
-                    <div class="col-sm-5 col-xs-6 tital " >Postal code:
-                    </div>
-                    <div class="col-sm-7"><%= @user.postal_code %><br><br>
-                    </div>
-                    <div class="clearfix">
-                    <button type="button" class="btn btn-primary">Experience</button>
-                              <% f.fields_for :experiences do | experiences_form | %>
-              <div class="form-group">
+    <div class="col-md-7 ">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4 >Profile</h4>
+        </div>
+        <div class="panel-body">
+          <div class="box box-info">
+            <div class="box-body">
+              <div class="col-sm-6">
+                <div  align="center"> 
+                <img alt="User Pic" 
+                     src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" 
+                     id="profile-image1" 
+                     class="img-circle img-responsive">
+                </div>
+                
+                <br>
+              </div>
+              <div class="col-sm-6">
+                <h4 style="color:#00b1b1;">
+                  <%= @user.first_name %> <%= @user.last_name %>
+                </h4>
+              </div>
+              <div class="clearfix"></div>
+                <hr style="margin:5px 0 5px 0;">
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Restautant:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.restaurant_name %>
+                </div>
+                <div class="clearfix">
+                </div>
+                 <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  First Name:
+                </div>
+                <div class="col-sm-7 col-xs-6 ">
+                  <%= @user.first_name %>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Last Name:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.last_name %>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " > 
+                  Cell Phone:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.cell %>
+                  <br>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Email:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.email %>
+                  <br>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  City:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.city %>
+                  <br>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Street address:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.street_address %>
+                  <br>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Province:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.province %>
+                  <br>
+                </div>
+                <div class="clearfix">
+                </div>
+                <div class="bot-border">
+                </div>
+                <div class="col-sm-5 col-xs-6 tital " >
+                  Postal code:
+                </div>
+                <div class="col-sm-7">
+                  <%= @user.postal_code %>
+                  <br>
+                  <br>
+                </div>
+                <div class="clearfix">
+                  <button type="button" class="btn btn-primary">Experience</button>
+                  <% f.fields_for :experiences do | experiences_form | %>
+                    <div class="form-group">
+                      <%= experiences_form.text_field :months, class: "form-control input-sm", placeholder: "Year(s) of experence", required: false %>
+                      <p class="error error-empty"> 
+                        year(s) of experence. 
+                      </p>
 
-              <%= experiences_form.text_field :months, class: "form-control input-sm", placeholder: "Year(s) of experence", required: false %>
-              <p class="error error-empty"> year(s) of experence. </p>
-
-            </div>
-              <% end %>
                     </div>
-                    <div class="bot-border">
-                    </div>
-                    </div>
-                    </div>
-                  </div>
+                  <% end %>
+                </div>
+                <div class="bot-border">
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
           <script>
           $(function() {
             $('#profile-image1').on('click', function() {
