--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -89,7 +89,7 @@
               <div class="clearfix">
 
                 <!-- Form for a user to add experience -->
-                <button href="/experiences/new" type="button" class="btn btn-primary">Experience</button>
+                <%= link_to link_to "Add experiences", controller: "experiences", action: "new" %>
 
               </div>
               <div class="bot-border">
