--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -84,7 +84,10 @@
               </div>
               <div class="col-sm-5 col-xs-6 title ">Postal code:
               </div>
-              <div class="col-sm-7"><%= @user.postal_code %><br><br>
+              <div class="col-sm-7"><%= @user.postal_code %><br>
+              </div>
+              <div class="clearfix">
+               <div class="col-sm-5 col-xs-6 title ">type of job:
               </div>
               <div class="clearfix">
 
