--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,11 +1,6 @@
 <div class="container">
-  <% if current_user.usertype_id == 1 %>
-    <% current_user.jobs.each do |o| %>
-      <% render 'owner', o: o %>
-    <% end %>
-  <% else %>
-    <% if current_user.usertype_id == 2 %>
-      <h4> Pending </h4>
+  <% if @userapps %>
+    <h4> Pending </h4>
       <div>
         <% @userapps.each do |userapp| %>
           <%= render 'userapp', userapp: userapp %>
