--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -39,7 +39,7 @@
 
         <div>
           <%= form.select(:jobtype_id) do %>
-            <% [['dishwasher', 1], ['line cook', 2], ['sous chef', 3], ['prep chef', 4], ['waiter', 5], ['hostess', 6]].each do |c| -%>
+            <% [['Dishwasher', 1], ['line cook', 2], ['Sous chef', 3], ['Prep chef', 4], ['Waiter', 5], ['Hostess', 6]].each do |c| -%>
               <%= content_tag(:option, c.first, value: c.last) %>
             <% end %>
           <% end %>
